Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65108

'checkable' feature of a Button doesn't work if the Button has an action connected to it

    XMLWordPrintable

Details

    • 3688d440ab22c5887dd5f5e85de561f5571ea6ba

    Description

      'checkable' feature of a Button doesn't work if the Button has an action connected to it

      Steps to reproduce:

      • run the sample attached.
      • press the buttons and observe the behavior.
        EXPECTED: Both button are checkable.
        ACTUAL: The button with an action connected to it does not behave as a checkable control.

      Attachments

        For Gerrit Dashboard: QTBUG-65108
        # Subject Branch Project Status CR V

        Activity

          People

            poikelin Joni Poikelin
            risto.sipola Risto Sipola
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes