Fix double toggling through Action with checked AbstractButton

Action caused checked state of the button to be reset back to its
original value if checked status had been change through click or key
press. To avoid this, separate private function has been added to that
does not change the status.

Task-number: QTBUG-65108
Change-Id: I8a5aaa9aab739db3ba10d0202f5fb718cc7195bd
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>